--- a/website/index.html
+++ b/website/index.html
@@ -8,6 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="website.js" defer></script>
 </head>
 <body>
     <div class="jumbotron text-center">
@@ -19,8 +20,8 @@
       <div class="container text-center">
         <div class="row">
           <div class="col-sm-12">
-            <input type="text" placeholder="Type something..." id="myInput">  
-            <button type="button" onclick="getInputValue();">Get Value</button>  
+            <input type="text" placeholder="Type something..." id="indexInput">  
+            <button type="button" id="searchBtn" onclick="getInputValue();">Get Value</button>  
           </div>
       </div>
       <br><br>
@@ -35,52 +36,6 @@
             <h4 id="age"></h4> 
           </div>
         </div>
-      </div>
-      
-    <!-- <script src="index.js"></script> -->
-    <script>
-        async function getDog(endpoint) {
-            let str = "http://localhost:3000"
-            let url = str + endpoint
-
-            fetch(url)
-              .then(function (response) {
-                return response.json();
-              })
-              .then(function (jsonData) {
-                console.log(jsonData)
-                document.getElementById("name").textContent = jsonData.name
-                document.getElementById("age").textContent = jsonData.age
-              })
-              .catch(function (error){
-                console.log("Error: " + error)
-              })
-        } 
-
-        async function getMsg() {
-          let url = "http://localhost:3000"
-
-          fetch(url)
-            .then(function (response) {
-              return response.json();
-            })
-            .then(function (jsonData) {
-              console.log(jsonData)
-              document.getElementById("msg").textContent = jsonData[0].msg
-            })
-            .catch(function (error){
-              console.log("Error: " + error)
-            })
-        }
-
-        getMsg()
-
-        function getInputValue(){
-            let inputVal = document.getElementById("myInput").value;
-            let x = "/dogs/" + inputVal;
-            getDog(x)
-        }
-
-    </script>
+      </div>      
 </body>
 </html>
