--- a/website/index.html
+++ b/website/index.html
@@ -1,41 +1,151 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Dog api</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>HOME</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/font-awesome.css">
     <script src="website.js" defer></script>
 </head>
-<body>
-    <div class="jumbotron text-center">
-        <h1>Dog API</h1>
-        <br>
-        <h2 id="msg"></h2>
-      </div>
-      <br><br>
-      <div class="container text-center">
-        <div class="row">
-          <div class="col-sm-12">
-            <input type="text" placeholder="Type something..." id="indexInput">  
-            <button type="button" id="searchBtn" onclick="getInputValue();">Get Value</button>  
+<body class="d-flex flex-column min-vh-100">
+   
+  <nav class="navbar sticky-top navbar-expand-md navbar-dark justify-content-center" id="top">
+      <div class="container-md d-flex" id="containerNavId">
+          
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" id="hamburgerButton">
+      <span class="navbar-toggler-icon"></span>            
+  </button>
+          <div class="collapse navbar-collapse justify-content-center " id="collapsibleNavbar">
+              <ul class="navbar-nav">
+                  <li class="nav-item">
+                      <a class="nav-link active" href="cats.html" id="navItem" target="_blank">Cats</a>
+                  </li>    
+                  <li class="nav-item">
+                    <a class="navbar-brand" href="index.html"><img src="../images/logo.png" alt="logo" id="logoId"></a>
+                </li>                 
+                  <li class="nav-item">
+                      <a class="nav-link active" href="dogs.html" id="navItem" target="_blank">Dogs</a>
+                  </li>                 
+              </ul>
           </div>
-      </div>
-      <br><br>
-    <div class="container text-center">
-        <div class="row">
-          <div class="col-sm-6">
-            <label>Name: </label>
-            <h4 id="name"></h4>
-          </div>
-          <div class="col-sm-6">
-            <label>Age: </label>
-            <h4 id="age"></h4> 
-          </div>
-        </div>
       </div>      
+  </nav> 
+
+  <div class="jumbotron text-center" id="title">
+      <h1 id="titleH1">Animals API</h1>
+      <br>
+      <h3 id="subitleH4"></h3>
+  </div>
+  <br>  
+ 
+  <div id="demo" class="carousel slide" data-ride="carousel" style="width: 75%; margin: auto; ">
+
+    <!-- Indicators -->
+    <ul class="carousel-indicators">
+        <li data-target="#demo" data-slide-to="0" class="active"></li>
+        <li data-target="#demo" data-slide-to="1"></li>
+        <li data-target="#demo" data-slide-to="2"></li>
+    </ul>
+
+    <div id="picsH2"><h2 style="font-size: 45px ;">Some of our animals:</h2></div>
+    <br>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+          <img src="../images/dog1.png" alt="Dog 1" width="100%">
+          <div class="carousel-caption">
+            <h3 style="font-size: 68px; font-weight: bold;">Dog 1</h3></div>
+      </div>
+      <div class="carousel-item">
+        <img src="../images/cat1.png" alt="Cat 1" width="100%">
+        <div class="carousel-caption">
+          <h3 style="font-size: 68px; font-weight: bold;">Cat 1</h3> </div>
+      </div>
+      <div class="carousel-item">
+        <img src="../images/dog2.png" alt="Dog 2" width="100%">
+          <div class="carousel-caption">
+            <h3 style="font-size: 68px; font-weight: bold;">Dog 2</h3></div>
+      </div>
+      <div class="carousel-item">
+        <img src="../images/cat2.png" alt="Cat 2" width="100%">
+          <div class="carousel-caption">
+            <h3 style="font-size: 68px; font-weight: bold;">Cat 2</h3></div>
+      </div>
+      <div class="carousel-item">
+        <img src="../images/dog3.png" alt="Dog 3" width="100%">
+          <div class="carousel-caption">
+            <h3 style="font-size: 68px; font-weight: bold;">Dog 3</h3></div>
+      </div>
+      <div class="carousel-item">
+        <img src="../images/cat3.png" alt="Cat 3" width="100%">
+          <div class="carousel-caption">
+            <h3 style="font-size: 68px; font-weight: bold;">Cat 3</h3></div>
+      </div>
+      <div class="carousel-item">
+        <img src="../images/dog4.png" alt="Dog 4" width="100%">
+        <div class="carousel-caption">
+          <h3 style="font-size: 68px; font-weight: bold;">Dog 4</h3></div>
+      </div>
+      <div class="carousel-item">
+        <img src="../images/cat4.png" alt="Cat 4" width="100%">
+          <div class="carousel-caption">
+            <h3 style="font-size: 68px; font-weight: bold;">Cat 4</h3></div>
+      </div>
+      <div class="carousel-item">
+        <img src="../images/dog5.png" alt="Dog 5" width="100%">
+          <div class="carousel-caption">
+            <h3 style="font-size: 68px; font-weight: bold;">Dog 5</h3></div>
+      </div>
+      <div class="carousel-item">
+        <img src="../images/cat5.png" alt="Cat 5" width="100%">
+          <div class="carousel-caption">
+            <h3 style="font-size: 68px; font-weight: bold;">Cat 5</h3></div>
+      </div>
+    </div>
+
+   
+
+      <!-- Left and right controls -->
+      <a class="carousel-control-prev" href="#demo" data-slide="prev">
+          <span class="carousel-control-prev-icon"></span>
+      </a>
+      <a class="carousel-control-next" href="#demo" data-slide="next">
+          <span class="carousel-control-next-icon"></span>
+      </a>
+    </div>
+
+    <br><br>
+
+  </div>
+
+  <footer class="mt-auto">
+      <br>
+      <div class="container justify-content-center">
+          <div class="row ">
+              <div class="col-sm-12 ">
+                  <p id="socialsHeader">My Socials</p>
+              </div>
+          </div>
+      </div>
+      <div class="container justify-content-center">
+          <div class="row ">
+              <div class="col-sm-12 ">
+                  <p>
+                      <a href="https://twitter.com/WalkingZ3dd" target="_blank" id="socialButton"><button type="button" class="btn btn-social-icon btn-outline-twitter"><i class="fa fa-twitter"></i></button></a>
+                      <a href="https://github.com/WalkingZ3d?tab=repositories" target="_blank" id="socialButton"><button type="button" class="btn btn-social-icon btn-outline-github"><i class="fa fa-github"></i></button></a>
+                      <a href="https://www.linkedin.com/in/daniel-willis-44b4a7189/" target="_blank" ><button type="button" class="btn btn-social-icon btn-outline-linkedin"><i class="fa fa-linkedin"></i></button></a></p>
+              </div>
+          </div>
+      </div>         
+      <p id="nameEnd">Dan Willis</p>
+  </footer>
+  
 </body>
 </html>
